#6: cleanup - update labels - remove chrome restricted inline policy

--- a/app/popup.html
+++ b/app/popup.html
@@ -17,7 +17,7 @@
   limitations under the License.
   -->
   <meta charset="utf-8">
-  <title>Google Engine Switch</title>
+  <title>Gmail Switch</title>
 
   <!-- build:css styles/popup-vendor.css -->
   <!-- bower:css -->
@@ -45,12 +45,12 @@
   <div class=heading>
     <div class=vrow>
       <div class=logo></div>
-      <h2>Google Engine Switch</h2>
+      <h2>Gmail Switch</h2>
     </div>
   </div>
   <div class=search>
     <div class=vrow>
-      <div class=export> Search Engine Alternative</div>
+      <div class=export>Gmail Switch</div>
     </div>
     <div class=vrow>
       <div>
