--- a/app/options.html
+++ b/app/options.html
@@ -12,42 +12,84 @@
   <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
-  <!-- build:js scripts/polymer/polymer.html -->
+  <!-- build:js scripts/webcomponentsjs/webcomponents-lite.js -->
   <!-- bower:js -->
-  <link rel="import" href="bower_components/polymer/polymer.html">
+  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
+  <!-- build:js bower_components/shadydom/shadydom.min.js -->
+  <!-- bower:js -->
+  <script src="bower_components/shadydom/shadydom.min.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:js bower_components/shadycss/custom-style-interface.min.js -->
+  <!-- bower:js -->
+  <script src="bower_components/shadycss/custom-style-interface.min.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:js bower_components/shadycss/apply-shim.min.js -->
+  <!-- bower:js -->
+  <script src="bower_components/shadycss/apply-shim.min.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
+  <link rel="import" href="elements/elements.html"/>
 </head>
 <body>
 
-<paper-card>
-  <div class="card-content">
-    <div class="cafe-header">Cafe Basilico
-      <div class="cafe-location cafe-light">
-        <iron-icon icon="communication:location-on"></iron-icon>
-        <span>250ft</span>
+<custom-style>
+  <style is="custom-style">
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    paper-card {
+      max-width: 500px;
+    }
+    .cafe-header { @apply --paper-font-headline; }
+    .cafe-light { color: var(--paper-grey-600); }
+    .cafe-location {
+      float: right;
+      font-size: 15px;
+      vertical-align: middle;
+    }
+    .cafe-reserve { color: var(--google-blue-500); }
+    iron-icon.star {
+      --iron-icon-width: 16px;
+      --iron-icon-height: 16px;
+      color: var(--paper-amber-500);
+    }
+    iron-icon.star:last-of-type { color: var(--paper-grey-500); }
+  </style>
+  <custom-style>
+    <paper-card image="demo/donuts.png">
+      <div class="card-content">
+        <div class="cafe-header">Cafe Basilico
+          <div class="cafe-location cafe-light">
+            <iron-icon icon="communication:location-on"></iron-icon>
+            <span>250ft</span>
+          </div>
+        </div>
+        <div class="cafe-rating">
+          <iron-icon class="star" icon="star"></iron-icon>
+          <iron-icon class="star" icon="star"></iron-icon>
+          <iron-icon class="star" icon="star"></iron-icon>
+          <iron-icon class="star" icon="star"></iron-icon>
+          <iron-icon class="star" icon="star"></iron-icon>
+        </div>
+        <p>$・Italian, Cafe</p>
+        <p class="cafe-light">Small plates, salads &amp; sandwiches in an intimate setting.</p>
       </div>
-    </div>
-    <div class="cafe-rating">
-      <iron-icon class="star" icon="star"></iron-icon>
-      <iron-icon class="star" icon="star"></iron-icon>
-      <iron-icon class="star" icon="star"></iron-icon>
-      <iron-icon class="star" icon="star"></iron-icon>
-      <iron-icon class="star" icon="star"></iron-icon>
-    </div>
-    <p>$・Italian, Cafe</p>
-    <p class="cafe-light">Small plates, salads &amp; sandwiches in an intimate setting.</p>
-  </div>
-  <div class="card-actions">
-    <div class="horizontal justified">
-      <paper-icon-button icon="icons:event"></paper-icon-button>
-      <paper-button>5:30PM</paper-button>
-      <paper-button>7:30PM</paper-button>
-      <paper-button>9:00PM</paper-button>
-      <paper-button class="cafe-reserve">Reserve</paper-button>
-    </div>
-  </div>
-  <button id="save">Save</button>
-</paper-card>
+      <div class="card-actions">
+        <div class="horizontal justified">
+          <paper-icon-button icon="icons:event"></paper-icon-button>
+          <paper-button>5:30PM</paper-button>
+          <paper-button>7:30PM</paper-button>
+          <paper-button>9:00PM</paper-button>
+          <paper-button class="cafe-reserve">Reserve</paper-button>
+        </div>
+      </div>
+    </paper-card>
+  </custom-style></custom-style>
 </body>
 </html>
