#6: cleanup and update icons

--- a/app/about.html
+++ b/app/about.html
@@ -35,12 +35,12 @@
     <div class=vrow>
       <div class=logo> </div>
       <ul>
-        <li class=title>Google Engine Switch</li>
+        <li class=title>Gmail Switch</li>
       </ul>
     </div>
   </div>
   <div class=vrow>
-    <div class=license> Google Engine Switch is released under the <a href=http://www.apache.org/licenses/LICENSE-2.0>Apache License Version 2.0</a>.
+    <div class=license> Gmail Switch is released under the <a href=http://www.apache.org/licenses/LICENSE-2.0>Apache License Version 2.0</a>.
     </div>
   </div>
   <div class=vrow>
