--- a/app/popup.html
+++ b/app/popup.html
@@ -56,18 +56,15 @@
 
 <div class=vcontainer id=main-page>
   <div class=gb_Cb>
-    <div class=gb_Db aria-hidden=false><a class=gb_Eb href=https://mail.google.com/mail/u/0 target=_blank
-                                          rel=noreferrer>
-      <div class=gb_Hb>
-        <div id="message" class=gb_Qb>vladimir.pasquier@gmail.com</div>
-      </div>
-    </a> <a class=gb_Eb href=https://mail.google.com/mail/u/2 target=_blank rel=noreferrer>
-      <div class=gb_Hb>
-        <div class=gb_Qb>vladletter@gmail.com</div>
-      </div>
-    </a></div>
+    <div class=gb_Db aria-hidden=false>
+      <a class=gb_Eb href=https://mail.google.com/mail/u/0 target=_blank
+         rel=noreferrer>
+        <div class=gb_Hb>
+          <div id="message" class=gb_Qb>vladimir.pasquier@gmail.com</div>
+        </div>
+      </a>
+    </div>
   </div>
-  <popup-element toggle-icon="favorite"></popup-element>
 </div>
 </body>
 </html>
