replace Verdict by V

--- a/app/about.html
+++ b/app/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!--
-  Verdict Copyright
+  V Copyright
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -47,7 +47,7 @@
     <div id=version class=version>1.0</div>
   </div>
   <div class=vrow>
-    <div class=copyright> &#169; ~ Verdict</div>
+    <div class=copyright> &#169; ~ V</div>
   </div>
 </div>
 <!-- build:js scripts/about-vendor.js -->
