--- a/app/popup.html
+++ b/app/popup.html
@@ -39,7 +39,8 @@
 <div class=nav-link><a href=about.html>About</a></div>
 <div class=vcontainer>
   <div class=pure-g id=accounts>
-    <div class=pure-u-1-1><h3><a id=refresh class="pure-button pure-button-primary" href="#">Refresh</a></h3></div>
+    <div class=pure-u-1-1><h3><a id=refresh class="pure-button pure-button-primary" href=#>Refresh</a></h3></div>
+    <div class=pure-u-1-1><h3><a id=openAll class="pure-button pure-button-primary" href=#>Open All</a></h3></div>
   </div>
 </div>
 </body>
